added nlog, unit test, JSON serialization/deserialization

--- a/Restaurants0/DataAccess/DataAccess.csproj
+++ b/Restaurants0/DataAccess/DataAccess.csproj
@@ -36,6 +36,9 @@
     <Reference Include="EntityFramework.SqlServer, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089, processorArchitecture=MSIL">
       <HintPath>..\packages\EntityFramework.6.2.0\lib\net45\EntityFramework.SqlServer.dll</HintPath>
     </Reference>
+    <Reference Include="Newtonsoft.Json, Version=11.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.11.0.2\lib\net45\Newtonsoft.Json.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
@@ -73,6 +76,7 @@
     <Compile Include="Review.cs">
       <DependentUpon>RestaruantModel.tt</DependentUpon>
     </Compile>
+    <Compile Include="SerializerClass.cs" />
     <Compile Include="sp_helpdiagramdefinition_Result.cs">
       <DependentUpon>RestaruantModel.tt</DependentUpon>
     </Compile>
